Fix long press on mobile Safari

--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,8 @@
     position: relative;
     touch-action: none;
     user-select: none;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
 }
 
 body {
